added DE and pathway analysis example code

--- a/DEseq2_example_code.Rmd
+++ b/DEseq2_example_code.Rmd
@@ -518,6 +518,10 @@ View(as.data.frame(rowData(dds_filtered_updated)))
 # Get the results from your dds object - call it `results_obj`
 
 ```{r}
+# load objects from yesterday
+results_obj <- readRDS("results_obj")
+dds_filtered_updated <- readRDS("dds_filtered_updated")
+
 # What do the results() and summary() do, what arguments can you specify? 
 dds_filtered_updated <- nbinomWaldTest(object=dds_filtered_updated)
 
@@ -535,7 +539,15 @@ head(dds_filtered_updated)
  
 ```{r}
 # Plot normalised counts for gene ENSMUSG00000041779
+plotCounts_matrix <- plotCounts(
+  dds_filtered_updated, 
+  gene="ENSMUSG00000041779",
+  intgroup = "cell_type", 
+  normalized = TRUE, 
+  returnData = TRUE
+)
 
+plotCounts_matrix
 ```
 
 # Access the results table for the comparison between CD8 and CD4 T cells . Youu can also try to CD4 vs CD8 (i.e. switch the reference) - you could also try this for replicate 1 vs replicate 3 as a control 
@@ -543,7 +555,19 @@ head(dds_filtered_updated)
 checkout `resultsNames()`  & `results()`
 
 ```{r}
+resultsNames(dds_filtered_updated)
+results_obj <- results(dds_filtered_updated)
+head(results_obj)
 
+# create a results object using the replicate 3 vs 1 comparison 
+results_obj_rep_3v1 <- results(dds_filtered_updated, name="replicate_3_vs_1")
+
+# here we are using the results function to generate a new comparison using the contrast option - this comparison was not carried out previously by DEseq 
+results_obj_rep_3v2 <- results(dds_filtered_updated, contrast=c("replicate", "3", "2"))
+head(results_obj_rep_3v2)
+
+# we can set alpha to 0.05 in the results function to only show results were p is <0.05
+summary(results(dds_filtered_updated, alpha=0.05))
 ```
 
 Table should contain log2 fold changes and p-values for all genes
@@ -551,14 +575,23 @@ Table should contain log2 fold changes and p-values for all genes
 # Plot a histogram of the raw and BH-adjusted p-values using ggplot – do they look as expected? for CD8 vs CD4
 
 ```{r}
+# create a dataframe so that we can use ggplot
+results_obj_dataframe <- as.data.frame(results_obj)
+results_obj_dataframe
 
+# as we want to make 2 histograms in one plot, put the data in the geom_histogram function as opposed to the ggplot
+ggplot(data=results_obj_dataframe) + geom_histogram(aes(x=pvalue), fill="lightblue") + geom_histogram(aes(x=padj), fill="lightgreen")
 ```
 
 
 # Generate an MA plot of the log2 FC values for all genes using DESeq2 plotMA()
 
 ```{r}
-
+plotMA(
+  results_obj,
+  alpha=0.05,
+  colNonSig="red"
+)
 
 ```
 
@@ -567,6 +600,16 @@ Table should contain log2 fold changes and p-values for all genes
 ```{r}
 
 # call your results table  called shrunkenLFC_dds_results_obj
+results_obj_shrunk <- lfcShrink(dds_filtered_updated, coef=4, type="apeglm")
+
+results_obj_shrunk
+
+# plot the new results after shrinking 
+plotMA(
+  results_obj_shrunk,
+  alpha=0.05,
+  colNonSig="red"
+)
 
 ```
 
@@ -576,40 +619,68 @@ Table should contain log2 fold changes and p-values for all genes
 ```{r}
 
 # convert shrunkenLFC_dds_results_obj to a dataframe and call it shrunkenLFC_dds_results_df
+results_obj_shrunk_dataframe <- as.data.frame(results_obj_shrunk)
+
+class(results_obj_shrunk_dataframe)
 
 # Use the org.Mm.eg.db package to get gene symbols for the ensembl gene ids (hint:you did this on bioconductor day) 
 
 # How many Ensembl IDs are not assigned an gene symbol and how many gene symbols are duplicated?
+library(org.Mm.eg.db)
 
-
-
-keytypes(org.Mm.eg.db)      #to remind us of what keytypes are in this particular db
+keytypes(org.Mm.eg.db) #to remind us of what keytypes are in this particular db
 
 # use mapIds() to get 1:1 mapping for SYMBOL, ENTREZ and MGI
+# need to do this as 3 separate mapIds commands 
+gene_symbols <- mapIds(
+  org.Mm.eg.db, 
+  keys = row.names(results_obj_shrunk_dataframe), 
+  "SYMBOL", 
+  "ENSEMBL")
+
+gene_entrezid <- mapIds(
+  org.Mm.eg.db, 
+  keys = row.names(results_obj_shrunk_dataframe),
+  "ENTREZID",
+  "ENSEMBL")
+
+gene_mgi <- mapIds(
+  org.Mm.eg.db, 
+  keys = row.names(results_obj_shrunk_dataframe),
+  "MGI",
+  "ENSEMBL")
 
 # add mapId vectors to  shrunkenLFC_dds_results_df
+results_obj_shrunk_dataframe <- mutate(
+  results_obj_shrunk_dataframe,
+  "gene_symbols" = gene_symbols, 
+  "gene_entrezid" = gene_entrezid,
+  "gene_mgi" = gene_mgi
+)
+
+results_obj_shrunk_dataframe
 ```
 
 
 # Export all the results to CSV
 
 ```{r}
-write_csv(shrunkenLFC_dds_results_df, "CD8_vs_CD4_DE_results_lfcshrinkage_allgenes.csv")
+write_csv(results_obj_shrunk_dataframe, "CD8_vs_CD4_DE_results_lfcshrinkage_allgenes.csv")
 ```
 
 # Filter res_df and save as CSV
 
 ```{r}
 #Filter the results table for padj < 0.05 and absolute log2 FC > 1, and write to a CSV file
-res_0.05 <- shrunkenLFC_dds_results_df %>% 
+res_0.05 <- results_obj_shrunk_dataframe %>% 
     dplyr::filter(padj < 0.05 & abs(log2FoldChange) > 1)
 
 #Get upregulated genes - Filter the results table for padj < 0.05 and log2FoldChange FC > 1, and write to a CSV file
-res_0.05_up <- shrunkenLFC_dds_results_df %>% 
+res_0.05_up <- results_obj_shrunk_dataframe %>% 
     dplyr::filter(padj < 0.05 & log2FoldChange > 1)
 
 #Get doownregulated genes - Filter the results table for padj < 0.05 and log2FoldChange FC < 1, and write to a CSV file
-res_0.05_down <- shrunkenLFC_dds_results_df %>% 
+res_0.05_down <- results_obj_shrunk_dataframe %>% 
     dplyr::filter(padj < 0.05 & log2FoldChange < -1)
 
 write_csv(res_0.05, 
